# file_transfer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  docker-compose.yml  exec.sh  execClient.sh  execServer.sh
client/: CMakeCache.txt  CMakeLists.txt  Makefile  client.cpp  client.hpp  cmake_install.cmake  main.cpp  start  startClient
docker/client/: Dockerfile
docker/server/: Dockerfile
server/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  server.cpp  server.hpp  session.cpp  session.hpp  startServer
